use gap and fix widths on skills

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -72,10 +72,8 @@
 
   #skills-container .skills-card {
     min-width: 75%;
-    min-height: 400px;
     margin-bottom: 2em;
     border-radius: 0;
-    min-height: 400px
   }
 
   .skills-card li {
@@ -311,10 +309,18 @@ section {
   background-color: rgb(250, 243, 235);
   height: auto;
   padding: 4% 0 4% 0;
+}
+
+.skill-cards-container {
+  background-color: rgb(250, 243, 235);
+  padding: 4% 0 4% 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  max-width: 90%;
   flex-wrap: wrap;
+  margin: 0 auto;
+  gap: 1em;
 }
 
 .skill-title {
@@ -332,8 +338,8 @@ section {
 }
 
 .skills-card {
-  height: 350px;
-  width: 28%;
+  /* width: 28%; */
+  min-width: 300px;
   color: rgb(250, 243, 235);
   background-color:  #333;
   display: flex;
@@ -342,7 +348,6 @@ section {
   align-items: center;
   border-radius: 5%;    
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-
 }
 
 .skills-card ul {
